@@ -1,0 +1,31 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyndex/pyndex-0.3.2a-r1.ebuild,v 1.1 2015/02/18 02:47:34 idella4 Exp $
+
+EAPI=5
+
+PYTHON_COMPAT=( python2_7 )
+DISTUTILS_SINGLE_IMPL=1
+
+inherit distutils-r1
+
+MY_PN="Pyndex"
+MY_P="${MY_PN}-${PV}"
+
+DESCRIPTION="Simple and fast Python full-text indexer (aka search engine) using Metakit as its back-end"
+HOMEPAGE="http://www.divmod.org/Pyndex/index.html"
+SRC_URI="mirror://sourceforge/pyndex/${MY_P}.tar.gz"
+
+LICENSE="LGPL-2.1"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+RDEPEND=">=dev-db/metakit-2.4.9.2[python]"
+DEPEND=""
+
+S="${WORKDIR}/${MY_P}"
+
+pkg_setup() {
+	python-single-r1_pkg_setup
+}
